# PyCRM

./: .env.example  .gitignore  DEPLOY_QUICK_START.md  DEPLOY_SUMMARY.md  Dockerfile  EMAIL_FEATURE_SUMMARY.md  EMAIL_FIX_LOG.md  EMAIL_INIT_FIX.md  EMAIL_MASK_DEMO.md  EMAIL_MASK_FEATURE.md  EMAIL_QUICKSTART.md  EMAIL_SEND_GUIDE.md  EMAIL_TEMPLATE_SETUP.md  EMAIL_WHITELIST.md  GMAIL_API_QUICKSTART.md  GMAIL_AUTH_FIX_SUMMARY.md  GMAIL_AUTH_SEPARATION.md  GMAIL_AUTH_URGENT_FIX.md  GMAIL_OAUTH_IMPROVEMENT.md  GMAIL_OAUTH_IMPROVEMENT_OLD.md  GMAIL_STATE_FIX_COMPLETE.md  GOOGLE_LOGIN_IMPLEMENTATION.md  GOOGLE_LOGIN_QUICKSTART.md  GOOGLE_LOGIN_SETUP.md  HTTP_LOGIN_FIX.md  INVALID_CLIENT_FIX.md  LOGIN_LOG.md  OAUTH_COMPLETE_GUIDE.md  OAUTH_FIX_FINAL.md  OAUTH_FLOW_DIAGRAM.md  OAUTH_REDIRECT_URI_CONFLICT_FIX.md  OAUTH_STATE_FIX.md  PROJECT_SUMMARY.md  QUICKFIX_REDIRECT_URI.md  QUICKSTART.md  README.md  REDIRECT_URI_FIX.md  RUN_ME.sh  SESSION_COOKIE_FIX.md  SORT_FEATURE.md  (+31 more)
app/: auth.py  crud.py  database.py  email_service.py  exchange_rate.py  main.py  models.py  schemas.py
app/routers/: clients.py  emails.py  exchange_rate.py
app/static/css/: custom.css
app/static/js/: main.js
app/templates/: access_denied.html  base.html  client_form.html  dashboard.html  email_logs.html  exchange_rate_history.html  gmail_auth_error.html  gmail_auth_success.html  import_csv.html  login.html  send_email.html
