[project]
name = "crm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.4",
    "jinja2>=3.1.6",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "apscheduler>=3.10.0",
]
